src/objects/Time_Log__c.object
<CustomObject>
    <fields>
        <fullName>Check_Out_Reason__c</fullName>
        <label>Check Out Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Close of Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lunch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Checked_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checked-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Status__c</fullName>
        <formula>IF( Checked_In__c = TRUE, IMAGE(&quot;/servlet/servlet.FileDownload?file=015o0000001wimm&quot;,&quot;Checked-In&quot;)&amp;&quot; You are currently checked-in&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015o0000001wimn&quot;,&quot;Checked-Out&quot;)&amp;&quot; You are currently checked-out&quot;)</formula>
        <label>Current Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Time_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Time_Checked_In__c</fullName>
        <label>Last Time Checked-In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Time_Checked_Out__c</fullName>
        <label>Last Time Checked-Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Log_Action__c</fullName>
        <label>Log Action</label>
        <picklist>
            <picklistValues>
                <fullName>Check-In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check-Out</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Time Log</label>
    <listViews>
        <fullName>All_Time_Logs</fullName>
        <columns>NAME</columns>
        <columns>Checked_In__c</columns>
        <columns>Current_Status__c</columns>
        <columns>Last_Time_Checked_In__c</columns>
        <columns>Last_Time_Checked_Out__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Time Logs</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Time Log For</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Logs</pluralLabel>
    <recordTypes>
        <fullName>Check_In</fullName>
        <active>true</active>
        <label>Check-In</label>
    </recordTypes>
    <recordTypes>
        <fullName>Check_Out</fullName>
        <active>true</active>
        <label>Check-Out</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Employee_Required</fullName>
        <active>true</active>
        <description>This checks if the Employee field is not empty.</description>
        <errorConditionFormula>ISBLANK( Employee__c )</errorConditionFormula>
        <errorDisplayField>Employee__c</errorDisplayField>
        <errorMessage>Please select the respective Employee name.</errorMessage>
    </validationRules>
</CustomObject>